[gd_scene load_steps=2 format=3 uid="uid://xuonc6xxx4hr"]

[ext_resource type="Script" uid="uid://c00lpo1rerwhg" path="res://src/ui/ui.gd" id="1_rbl7x"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_rbl7x")

[node name="EnergyBar" type="ProgressBar" parent="."]
offset_left = 464.0
offset_top = 47.0
offset_right = 664.0
offset_bottom = 74.0
value = 100.0

[node name="FormIndicator" type="Label" parent="."]
offset_left = 328.0
offset_top = 50.0
offset_right = 418.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.14901961, 0.15294118, 0.12941177, 1)
text = "Particle"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 735.0
offset_top = 38.0
offset_right = 855.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Score: 0"
